feat: updating constraints for filter schema, adding api docs
