# marketing_op/api/schemas.py
@@ -3,6 +3,8 @@ from datetime import date as datetime_date
 from ninja import Schema
 from pydantic import BaseModel
 
+from core.constants import ChannelsEnum
+
 
 class MarketingDataSchema(BaseModel):
     product: str | None = None
@@ -17,7 +19,7 @@ class MarketingDataFilterSchema(Schema):
     products: list[str] | None = None
     campaigns: list[str] | None = None
     campaign_types: list[str] | None = None
-    channels: list[str] | None = None
+    channels: ChannelsEnum | None = None
     start_date: datetime_date | None = None
     end_date: datetime_date | None = None
 
